--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <button id="btn">Kirim</button>
 
   <script>
-    const webAppUrl = https://script.google.com/macros/s/AKfycby7OG4x8kP-937An5xJb5l1ulltvFEoJTu-5GAyV7ryQzL7VmXiVEfzBXCgxGdUE0Yd/exec; // ganti dengan URL Apps Script mu
+    const webAppUrl = https://script.google.com/macros/s/AKfycby7OG4x8kP-937An5xJb5l1ulltvFEoJTu-5GAyV7ryQzL7VmXiVEfzBXCgxGdUE0Yd/exec;
 
     document.getElementById('btn').addEventListener('click', send);
     document.getElementById('input').addEventListener('keydown', function(e){
